--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "e-shop",
   "version": "0.1.0",
-  "homepage": "http://vkuznetsoff.github.io/e-shop",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
@@ -28,9 +27,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
