--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-persist": "^6.0.0",
+    "svgo": "^2.8.0",
     "typescript": "^4.6.4",
     "uniqid": "^5.4.0",
     "web-vitals": "^2.1.4"
